objects/APTS_Stage_Quotation__c.object
<CustomObject>
    <description>Stage Object for Quotation</description>
    <fields>
        <fullName>APTS_Account_End_User__c</fullName>
        <label>Account End User</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Account__c</fullName>
        <label>Account</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Apply_Reason__c</fullName>
        <label>Apply Reason</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_ChannelSetValue_Code__c</fullName>
        <description>ABBLP-788</description>
        <label>ChannelSetValue (Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Country__c</fullName>
        <label>Country</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Created_On__c</fullName>
        <label>Created On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>APTS_Currency__c</fullName>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>EUR</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>APTS_Distribution_Channel__c</fullName>
        <label>Distribution Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Error_Description__c</fullName>
        <label>Error Description</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>APTS_Estimated_Delivery_Time__c</fullName>
        <label>Estimated Delivery Time</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_End_Date__c</fullName>
        <label>Expected End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expected_Start_Date__c</fullName>
        <label>Expected Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Expiration_Date__c</fullName>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_External_Id__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Finalized_Date__c</fullName>
        <label>Finalized Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Hierarchy_Discounts__c</fullName>
        <label>Hierarchy Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Incoterms__c</fullName>
        <label>Incoterms</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Indirect_Customer_Id__c</fullName>
        <description>ABBLP-788</description>
        <label>Indirect Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Local_Channel__c</fullName>
        <label>Local Channel</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Market_Segment__c</fullName>
        <description>ABBLP-788</description>
        <label>Market Segment</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Max_Order_Amount__c</fullName>
        <label>Max Order Amount</label>
        <precision>17</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>APTS_Operational_Object__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Operational Object Reference</description>
        <label>Quote/Proposal</label>
        <referenceTo>Apttus_Proposal__Proposal__c</referenceTo>
        <relationshipLabel>Stage Quotation</relationshipLabel>
        <relationshipName>Stage_Quotation</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>APTS_Owner__c</fullName>
        <description>Owner</description>
        <label>Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Payment_Term_MPT__c</fullName>
        <label>Payment Term(Code)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Price_Date__c</fullName>
        <label>Price Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Primary_Contact__c</fullName>
        <label>Primary Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Probability__c</fullName>
        <label>Probability</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Product_Discounts__c</fullName>
        <label>Product Discounts</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Name__c</fullName>
        <label>Quotation Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quotation_Type__c</fullName>
        <label>Quotation Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Identifier__c</fullName>
        <description>ABBLP-788</description>
        <label>Quote Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Quote_Status__c</fullName>
        <label>Quote Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Reference_System__c</fullName>
        <label>Reference System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_RowStatus__c</fullName>
        <description>Row Status of the Record. for ex: Initial Load, Validation Passed, Error, Load Complete</description>
        <label>RowStatus</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Customer_Id__c</fullName>
        <label>SAP Customer Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_SAP_Reference_No__c</fullName>
        <description>SAP Reference Number</description>
        <label>SAP Reference No</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Office__c</fullName>
        <label>Sales Office</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Organization__c</fullName>
        <label>Sales Organization</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Sales_Person__c</fullName>
        <label>Sales Person</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Status__c</fullName>
        <label>Status</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_From__c</fullName>
        <description>ABBLP-788</description>
        <label>Valid From</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_To__c</fullName>
        <description>ABBLP-788</description>
        <label>Valid To</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>APTS_Valid_Until_Date__c</fullName>
        <label>Valid Until Date</label>
        <type>Date</type>
    </fields>
    <label>Stage Quotation</label>
    <nameField>
        <displayFormat>Q-{0000}</displayFormat>
        <label>Stage Quotation Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stage Quotation</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>